--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ astroid==1.6.6
 awscli==1.16.206
 botocore==1.12.196
 colorama==0.3.9
+dj-database-url==0.5.0
 Django==2.0.2
 docutils==0.14
 ikp3db==1.1.4
@@ -12,6 +13,7 @@ lazy-object-proxy==1.4.1
 mccabe==0.6.1
 parso==0.1.1
 pbr==5.4.1
+psycopg2==2.8.3
 pyasn1==0.4.5
 pylint==1.8.1
 pylint-django==0.8.0
@@ -30,4 +32,3 @@ virtualenv==16.2.0
 virtualenv-clone==0.5.3
 virtualenvwrapper==4.8.4
 wrapt==1.11.2
-gunicorn==19.9.0
